--- a/src/app/components/quiz/question/question.component.html
+++ b/src/app/components/quiz/question/question.component.html
@@ -1,1 +1,12 @@
-<p>question works!</p>
+<div class="question-card">
+  <span>{{question.question}}</span>
+  <div class="answers">
+    <div *ngFor="let answer of question.allPossibleAnswers" class="answer">
+      <li>
+        <input type="radio" (change)="chooseAnswer(question)" [name]="question.question" [value]="answer">
+        {{ answer }}
+      </li>
+
+    </div>
+  </div>
+</div>
