--- a/src/app/components/quiz/question/question.component.html
+++ b/src/app/components/quiz/question/question.component.html
@@ -1,9 +1,9 @@
-<div class="question-card">
+<div [class]="questionStatus">
   <span>{{question.question}}</span>
   <div class="answers">
     <div *ngFor="let answer of question.allPossibleAnswers" class="answer">
       <li>
-        <input type="radio" (change)="chooseAnswer(question)" [name]="question.question" [value]="answer">
+        <input type="radio" (change)="chooseAnswer(answer)" [name]="question.question" [value]="answer">
         {{ answer }}
       </li>
 
