--- a/src/app/components/quiz/results-modal/results-modal.component.html
+++ b/src/app/components/quiz/results-modal/results-modal.component.html
@@ -1,12 +1,14 @@
-<!-- <ng-container *ngIf="!quizState.isModalHidden"> -->
-<ng-container *ngIf="false">
+<ng-container *ngIf="!quizState.isModalHidden">
+<!-- <ng-container *ngIf="true"> -->
   <div class="modal-screen">
     <div class="modal-container">
       <div class="header-bar">
         <button (click)="exit()">X</button>
       </div>
-      <div class="modal-contnet">
-        {{ quizState.score }} / 10
+      <div class="modal-content">
+        <span class="score">
+          {{ quizState.score }} / 10
+        </span>
       </div>
     </div>
   </div>
