--- a/src/app/components/quiz/question/question.component.scss
+++ b/src/app/components/quiz/question/question.component.scss
@@ -20,8 +20,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 10px;
-    .answer{
+    .answer.correct{
       // justify-self: center;
+      background-color: green
+    }
+    .answer.incorrect{
+      background-color: red;
     }
     li {
       list-style-type: none;
