--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -1,4 +1,23 @@
 .question-grid{
   grid-gap: 20px;
   display: grid;
+  margin: 30px;
+}
+.submit-retake-btn{
+  display: flex;
+  justify-content: center;
+  .submit-btn{
+    background-color: #5680E9;
+    border: 1px solid black;
+    border-radius: 25px;
+    box-shadow: 2px 2px 2px 2px gray;
+    color: white;
+    font-size: 14px;
+    padding: 15px;
+    transition: all .2s ease-in-out;
+    margin: 30px;
+    &:hover{
+      cursor: pointer;
+    }
+  }
 }
