some mobile styling

--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -39,6 +39,12 @@
     }
   }
 }
+@media  screen and (max-width: 600px) {
+  .topic-select .quiz-category{
+    margin: 8px;
+  }
+}
+
 
 .test{
   color: #5680E9;
