resolve different sizes for questions cards

--- a/src/app/components/quiz/quiz.component.html
+++ b/src/app/components/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 <div class="quiz-wrapper" *ngIf="quizState$ | async as quizState">
   <div *ngIf="isLoading" class="loading-wrapper">
     <div class="loading-spinner">
-      Loading
+      <span>Loading...</span>
     </div>
   </div>
   <div *ngIf="!isLoading" class="quiz-page">
