--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -1,11 +1,11 @@
 .welcome-page{
+  text-align: center;
   h2, h4{
-    color: black;
-    text-shadow: 1px 1px #C1C8E4;
+    color: white;
+    text-shadow: 2px 2px black;
     font-family: sans-serif;
   }
   .logo-container{
-    text-align: center;
     .angular-logo-img{
       height: 100px;
       width: 100px;
