--- a/src/app/components/quiz/quiz.component.scss
+++ b/src/app/components/quiz/quiz.component.scss
@@ -1,3 +1,10 @@
+.quiz-title{
+  text-align: center;
+  font-size: 32px;
+  color: white;
+  text-shadow: 2px 2px black;
+  font-family: sans-serif;
+}
 .question-grid{
   grid-gap: 20px;
   display: grid;
@@ -19,5 +26,43 @@
     &:hover{
       cursor: pointer;
     }
+  }
+}
+.loading-wrapper{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+.loading-spinner{
+  display: inline-block;
+  width: 55px;
+  height: 55px;
+  position: relative;
+  span{
+    margin-left: -25px;
+    color: white;
+    font-size: 28px;
+    text-shadow: 2px 2px black;
+  }
+}
+.loading-spinner:after {
+  content: " ";
+  display: block;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  border: 3px solid blue;
+  border-color: transparent transparent blue;
+  // border-color: orange;
+  animation: loading-spinner 1.2s linear infinite;
+}
+}
+@keyframes loading-spinner  {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
